--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Cross App</title>
   </head>
   <body style="background: #e7e7e7;">
 
     <div id="root"></div>
-
   </body>
 </html>
