--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,60 @@
     <meta name="theme-color" content="#000000" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Cross App</title>
+    <script>
+      var Obj = {
+        data: {
+          ans: "7a608984e8e428411442f14e85d5fe85",
+          width: 7,
+          height: 6,
+          size: 18,
+          colors: [{"id":1,"color":"#000000"}],
+          top: [
+            [{"count":"1","color":null},{"count":"1","color":null}],
+            [{"count":"2","color":null},{"count":"1","color":null}],
+            [{"count":"3","color":null},{"count":"1","color":null}],
+            [{"count":0,"color":null},{"count":"6","color":null}],
+            [{"count":"3","color":null},{"count":"1","color":null}],
+            [{"count":"2","color":null},{"count":"1","color":null}],
+            [{"count":"1","color":null},{"count":"1","color":null}]
+          ],
+          left: [
+            [{"count":"1","color":null}],
+            [{"count":"3","color":null}],
+            [{"count":"5","color":null}],
+            [{"count":"7","color":null}],
+            [{"count":"1","color":null}],
+            [{"count":"7","color":null}]
+          ]
+        }
+      };
+      var Obj2 = {
+        data: {
+          ans: "4bdd4c0e32d0d7f4aabbfe6dcfcf6e6e",
+          width: 5,
+          height: 5,
+          size: 18,
+          colors: [{"id":1,"color":"#6bb95d"}, {"id":2,"color":"#c51616"}],
+          top: [
+            [{"count": 5,"color":1}],
+            [{"count": 1,"color": 2}],
+            [{"count": 1,"color": 2}],
+            [{"count": 1,"color": 2}],
+            [{"count": 5,"color": 1}],
+          ],
+          left: [
+            [{"count": 0,"color": null}, {"count": 1,"color": 1}, {"count": 1,"color": 1}],
+            [{"count": 0,"color": null}, {"count": 1,"color": 1}, {"count": 1,"color": 1}],
+            [{"count": 1,"color": 1}, {"count": 3,"color": 2}, {"count": 1,"color": 1}],
+            [{"count": 0,"color": null}, {"count": 1,"color": 1}, {"count": 1,"color": 1}],
+            [{"count": 0,"color": null}, {"count": 1,"color": 1}, {"count": 1,"color": 1}],
+          ]
+        }
+      };
+    </script>
   </head>
   <body style="background: #e7e7e7;">
 
-    <div id="root"></div>
+    <div id="root" style="padding: 30px;"></div>
   </body>
 </html>
