Работа над историей в процессе

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
           width: 7,
           height: 6,
           size: 18,
+          history: [],
           colors: [{"id":1,"color":"#000000"}],
           top: [
             [{"count":"1","color":null},{"count":"1","color":null}],
@@ -40,6 +41,7 @@
           width: 5,
           height: 5,
           size: 18,
+          history: [],
           colors: [{"id":1,"color":"#6bb95d"}, {"id":2,"color":"#c51616"}],
           top: [
             [{"count": 5,"color":1}],
