--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/files/icons.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -10,7 +11,9 @@
     <script>
       var Obj = {
         data: {
+          check: false,
           id: 1,
+          timer: 0,
           ans: "7a608984e8e428411442f14e85d5fe85",
           width: 7,
           height: 6,
@@ -38,7 +41,9 @@
       };
       var Obj2 = {
         data: {
+          check: false,
           id: 2,
+          timer: 0,
           ans: "4bdd4c0e32d0d7f4aabbfe6dcfcf6e6e",
           width: 5,
           height: 5,
