чистка localstorage при решенном кроссворде заг пользователем

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
     <script>
       var Obj = {
         data: {
-          check: false,
+          check: true,
           id: 1,
-          timer: 60,
+          timer: 61,
           ans: "7a608984e8e428411442f14e85d5fe85",
           width: 7,
           height: 6,
